# Fuji

./: .gitignore  .gitmodules  CMakeLists.txt  Fuji.sln  LICENSE  Logger.ixx  Main.ixx  README.md  premake5.lua
Engine/: CMakeLists.txt  compilerSettings.cmake  postBuildSettings.cmake
Engine/dependencies/: glfwLibrary.cmake  glmLibrary.cmake  spdlogLibrary.cmake
Engine/src/: Application.ixx  Logger.ixx  Main.ixx  Window.ixx
Engine/src/Rendering/Vulkan/: Application.ixx  Instance.ixx  PhysicalDevice.ixx  References.ixx  Surface.ixx  Validation.ixx  Vulkan.ixx
Engine/src/rendering/Vulkan/: Application.ixx  Device.ixx  Helpers.ixx  References.ixx  Validation.ixx
Engine/src/utils/: types.ixx
Fuji/: Fuji.vcxproj  Fuji.vcxproj.filters
Fuji/src/: Fuji.h  fpch.h  fupch.cpp  fupch.h
Fuji/src/Fuji/: Application.cpp  Application.h  Core.h  Entrypoint.h  Log.cpp  Log.h  Window.h  types.h
Fuji/src/Fuji/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Fuji/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
SandBox/: SandBox.vcxproj
SandBox/src/: sandboxApp.cpp
research/ecs/: README.md
research/physics/: README.md
research/vulkan/: README.md
